<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2019 Lionscribe Software LLC

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">notification-channel-compat</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="settings_direct">Settings Direct</string>
    <string name="channel_direct">Channel Direct</string>
    <string name="notify">Notify</string>
    <string name="example_switch">Example Switch</string>
    <string name="channel_all_summary">Change your notification channel settings</string>
    <string name="channel_all_title">All Channel Settings</string>
    <string name="channel_single_summary">Change your Channel One Home settings</string>
    <string name="channel_single_title">Channel One Home Settings</string>

</resources>
