<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2019 Lionscribe Software LLC

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="example"
        app:title="@string/example_switch"/>

    <com.lionscribe.open.notificationchannelcompat.NotificationChannelPreference
        app:key="channel_settings"
        app:summary="@string/channel_all_summary"
        app:title="@string/channel_all_title"
        />

    <com.lionscribe.open.notificationchannelcompat.NotificationChannelPreference
        app:channelId="channel_one_home"
        app:key="channel_settings_channel_one_home"
        app:summary="@string/channel_single_summary"
        app:title="@string/channel_single_title"
        />

</PreferenceScreen>